--- a/aboutme.html
+++ b/aboutme.html
@@ -68,7 +68,7 @@
 
   <section>
     <h3>個人照片</h3>
-    <img src="1234.webp" alt="劉品辰的照片" width="200">
+    <img src="1234.jpg" alt="劉品辰的照片" width="200">
   </section>
 
   <section>
