--- a/example.html
+++ b/example.html
@@ -8,7 +8,7 @@
     <h1>歡迎來到我的網站</h1>
     <p>這是一段介紹文字。</p>
     <a href="https://www.example.com">前往範例網站</a>
-    <img src="R.jpg" alt="範例圖片">
+    <img src="R.jpg" alt="範例">
     <ul>
       <li>項目一</li>
       <li>項目二</li>
