--- a/aboutme.html
+++ b/aboutme.html
@@ -74,9 +74,9 @@
   <section>
     <h3>未來目標</h3>
     <p>
-      我的目標是希望可以順利畢業，並攻讀研究所，出來找到工作，<br>
-      <strong>我會提升自己的專業能力</strong>，並且學習更多知識，<br>
-      <em>未來我希望能夠過不錯的生活。</em>
+      我的目標是希望可以順利畢業，並攻讀研究所，出來找到好的工作，<br>
+      <strong>我會提升自己的專業能力</strong>，並學習更多知識，<br>
+      <em>未來我希望能夠過不錯的生活!</em>
     </p>
   </section>
 
